--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@tailwindcss/typography": "^0.5.16",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.0",
-    "next": "14.1.0",
+    "next": "15.4.1",
     "next-themes": "^0.4.6",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.59.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
@@ -28,10 +28,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint": "^9.16.0",
+    "eslint-config-next": "^15.4.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.7.3"
   }
 }
